<resources>
    <string name="app_name">DigitalHouseChallenge2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="senhaLogin">Senha</string>
    <string name="nome_register">Nome</string>
    <string name="register_senha">Senha</string>
    <string name="confirma_senha">Confirma Senha</string>
    <string name="register_form">Register</string>
    <string name="campo_obrigatorio">Campo %1$s está em branco</string>
    <string name="email_completo">Email</string>
    <string name="senha_nome">Senha</string>
    <string name="nome_completo">Nome</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="teste_descricaoCompleta">Nosso macarrão tem um toque especial do Renomado chefe Gustavo Fraldine,Sendo considerado sua \'Obra Prima\',o prato é composto por: Macarrão na manteiga, maionese caseira, tempero especial e vem com os mais frescos camarões selecionados a dedo</string>
    <string name="teste_nomeTelaDesricao">Pizza mussarela</string>
</resources>