<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragRegisterContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etRegisterNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:layout_marginEnd="18dp"
            android:hint="@string/nome_register"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/e_mail"
            app:layout_constraintEnd_toEndOf="@id/etRegisterNome"
            app:layout_constraintStart_toStartOf="@id/etRegisterNome"
            app:layout_constraintTop_toBottomOf="@id/etRegisterNome" />

        <EditText
            android:id="@+id/etREgisterSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:inputType="textPassword"
            android:hint="@string/register_senha"
            app:layout_constraintEnd_toEndOf="@id/etRegisterNome"
            app:layout_constraintStart_toStartOf="@id/etRegisterNome"
            app:layout_constraintTop_toBottomOf="@id/etRegisterEmail" />

        <EditText
            android:id="@+id/etConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:inputType="textPassword"
            android:hint="@string/confirma_senha"
            app:layout_constraintEnd_toEndOf="@id/etRegisterNome"
            app:layout_constraintStart_toStartOf="@id/etRegisterNome"
            app:layout_constraintTop_toBottomOf="@id/etREgisterSenha" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterDados"
            style="@style/ButtonDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/register_form"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>