<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/e_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/senhaLogin"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/etEmail"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textAlignment="center"
            android:textColor="#8A494747"
            android:textSize="17dp"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/ButtonDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/custom_button"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSenha" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="@style/ButtonDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/custom_button_register"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>